--- a/snippets.ipynb
+++ b/snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "primary-vatican",
+   "id": "spare-worst",
    "metadata": {},
    "source": [
     "# Tracking Knowledge Propagation Across Wikipedia Languages\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "usual-vegetation",
+   "id": "following-classification",
    "metadata": {},
    "source": [
     "## Load entire dataset"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "fitted-avatar",
+   "id": "crazy-soccer",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "flexible-sacramento",
+   "id": "incredible-compromise",
    "metadata": {},
    "source": [
     "## Load dataset by chuncks"
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "manual-frontier",
+   "id": "moral-cornwall",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "humanitarian-zambia",
+   "id": "divided-subscriber",
    "metadata": {},
    "source": [
     "## Terminology\n",
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "moral-webcam",
+   "id": "continuing-borough",
    "metadata": {},
    "source": [
     "## Process each collumn"
@@ -194,8 +194,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "dental-bidding",
+   "execution_count": 8,
+   "id": "thrown-munich",
    "metadata": {},
    "outputs": [
     {
@@ -207,8 +207,108 @@
       "100%|██████████| 13251684/13251684 [00:25<00:00, 511762.15it/s]\n",
       "100%|██████████| 13251684/13251684 [00:26<00:00, 503124.73it/s]\n",
       "100%|██████████| 13251684/13251684 [00:15<00:00, 843272.24it/s]\n",
-      " 80%|███████▉  | 10550730/13251684 [00:26<00:02, 913204.84it/s]"
+      "100%|██████████| 13251684/13251684 [00:29<00:00, 451246.84it/s]\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Wikidata ID</th>\n",
+       "      <th>Language Edition</th>\n",
+       "      <th>Creation Timestamp</th>\n",
+       "      <th>Topics</th>\n",
+       "      <th>Scores</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Q1</td>\n",
+       "      <td>[plwiki, svwiki, jawiki, fiwiki, frwiki, cswik...</td>\n",
+       "      <td>[1023468530, 1038689254, 1047585716, 105350405...</td>\n",
+       "      <td>[STEM.Space, STEM.STEM*, STEM.Physics]</td>\n",
+       "      <td>[0.99, 0.97, 0.97]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Q100</td>\n",
+       "      <td>[enwiki, svwiki, frwiki, nlwiki, zhwiki, eswik...</td>\n",
+       "      <td>[999811023, 1045709287, 1048540987, 1073222047...</td>\n",
+       "      <td>[Geography.Geographical]</td>\n",
+       "      <td>[0.9]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Q1000</td>\n",
+       "      <td>[enwiki, dewiki, svwiki, eswiki, nlwiki, jawik...</td>\n",
+       "      <td>[999997044, 1033492217, 1045359510, 1061260123...</td>\n",
+       "      <td>[Geography.Geographical, Geography.Regions.Afr...</td>\n",
+       "      <td>[0.9, 0.77]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Q10000</td>\n",
+       "      <td>[enwiki, eswiki, plwiki, fiwiki, jawiki, zhwik...</td>\n",
+       "      <td>[1103755157, 1124976107, 1138957516, 114660085...</td>\n",
+       "      <td>[STEM.Libraries_&amp;_Information, STEM.STEM*]</td>\n",
+       "      <td>[0.99, 0.98]</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Q100000</td>\n",
+       "      <td>[nlwiki, enwiki, liwiki, frwiki, zhwiki, cawik...</td>\n",
+       "      <td>[1139001160, 1139662968, 1142592879, 124437798...</td>\n",
+       "      <td>[Geography.Regions.Europe.Western_Europe, Geog...</td>\n",
+       "      <td>[1.0, 1.0, 0.94]</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Wikidata ID                                   Language Edition  \\\n",
+       "0          Q1  [plwiki, svwiki, jawiki, fiwiki, frwiki, cswik...   \n",
+       "1        Q100  [enwiki, svwiki, frwiki, nlwiki, zhwiki, eswik...   \n",
+       "2       Q1000  [enwiki, dewiki, svwiki, eswiki, nlwiki, jawik...   \n",
+       "3      Q10000  [enwiki, eswiki, plwiki, fiwiki, jawiki, zhwik...   \n",
+       "4     Q100000  [nlwiki, enwiki, liwiki, frwiki, zhwiki, cawik...   \n",
+       "\n",
+       "                                  Creation Timestamp  \\\n",
+       "0  [1023468530, 1038689254, 1047585716, 105350405...   \n",
+       "1  [999811023, 1045709287, 1048540987, 1073222047...   \n",
+       "2  [999997044, 1033492217, 1045359510, 1061260123...   \n",
+       "3  [1103755157, 1124976107, 1138957516, 114660085...   \n",
+       "4  [1139001160, 1139662968, 1142592879, 124437798...   \n",
+       "\n",
+       "                                              Topics              Scores  \n",
+       "0             [STEM.Space, STEM.STEM*, STEM.Physics]  [0.99, 0.97, 0.97]  \n",
+       "1                           [Geography.Geographical]               [0.9]  \n",
+       "2  [Geography.Geographical, Geography.Regions.Afr...         [0.9, 0.77]  \n",
+       "3         [STEM.Libraries_&_Information, STEM.STEM*]        [0.99, 0.98]  \n",
+       "4  [Geography.Regions.Europe.Western_Europe, Geog...    [1.0, 1.0, 0.94]  "
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -235,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "medieval-general",
+   "id": "opposite-dayton",
    "metadata": {},
    "outputs": [],
    "source": []
