--- a/snippets.ipynb
+++ b/snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "spare-worst",
+   "id": "swedish-rover",
    "metadata": {},
    "source": [
     "# Tracking Knowledge Propagation Across Wikipedia Languages\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "following-classification",
+   "id": "heavy-thinking",
    "metadata": {},
    "source": [
     "## Load entire dataset"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "crazy-soccer",
+   "id": "expensive-business",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "incredible-compromise",
+   "id": "curious-values",
    "metadata": {},
    "source": [
     "## Load dataset by chuncks"
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "moral-cornwall",
+   "id": "marked-japan",
    "metadata": {},
    "outputs": [
     {
@@ -170,15 +170,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "divided-subscriber",
+   "id": "related-panel",
    "metadata": {},
    "source": [
     "## Terminology\n",
     "\n",
-    "- Wikidata ID: the language-agnostic Wikidata identifier; for instance Q298 (Chile).\\footnote{\\url{https://www.wikidata.org/wiki/Q298}} %used to identify a concept. \n",
-    "- Language Edition: a specific language instance of an item. For example, the Portuguese version of Q298 would be ptwiki-Q298.\\footnote{\\url{https://pt.wikipedia.org/wiki/Chile}}\n",
+    "- Wikidata ID: the language-agnostic Wikidata identifier; for instance Q298 [Chile](https://www.wikidata.org/wiki/Q298). \n",
+    "- Language Edition: a specific language instance of an item. For example, the Portuguese version of Q298 would be [ptwiki-Q298](https://pt.wikipedia.org/wiki/Chile).\n",
     "- Creation Timestamp: an ordered list of linux timestamp align with the Language Edition list.\n",
-    "- Topics: a set of items belonging to the same topic (e.g. History). Note that the topic is assigned to the item, and is propagated to all the pages of the item. Therefore, if item Q298 belongs to the topic 'Geography', all the pages about Q298 would also belong to the same topic.\\footnote{\\url{https://meta.wikimedia.org/wiki/Research:Language-Agnostic_Topic_Classification}}\n",
+    "- Topics: a set of items belonging to the same topic (e.g. History). Note that the topic is assigned to the item, and is propagated to all the pages of the item. Therefore, if item Q298 belongs to the topic 'Geography', all the pages about Q298 would also belong to the same topic. [More...](https://meta.wikimedia.org/wiki/Research:Language-Agnostic_Topic_Classification)\n",
     "- Scores: an ordered list aling with the set of Topics that represent the probability of the assign topic being correct.\n",
     "\n",
     "We emphasize that we removed non-Wikipedia projects such as Wiktionary, Wikiquote, Wikibooks, and others. Furthermore, we also make the same dataset available in a CSV file, which is sorted first by Wikidata item and then by time of page creation."
@@ -186,7 +186,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "continuing-borough",
+   "id": "coupled-portugal",
    "metadata": {},
    "source": [
     "## Process each collumn"
@@ -195,7 +195,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "thrown-munich",
+   "id": "general-material",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "opposite-dayton",
+   "id": "informal-click",
    "metadata": {},
    "outputs": [],
    "source": []
