--- a/snippets.ipynb
+++ b/snippets.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "swedish-rover",
+   "id": "polish-multimedia",
    "metadata": {},
    "source": [
     "# Tracking Knowledge Propagation Across Wikipedia Languages\n",
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "heavy-thinking",
+   "id": "searching-phoenix",
    "metadata": {},
    "source": [
     "## Load entire dataset"
@@ -27,7 +27,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "expensive-business",
+   "id": "mysterious-encoding",
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "curious-values",
+   "id": "northern-salad",
    "metadata": {},
    "source": [
     "## Load dataset by chuncks"
@@ -149,7 +149,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "marked-japan",
+   "id": "forty-rough",
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "related-panel",
+   "id": "martial-norman",
    "metadata": {},
    "source": [
     "## Terminology\n",
@@ -186,16 +186,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "coupled-portugal",
+   "id": "prostate-thanks",
    "metadata": {},
    "source": [
-    "## Process each collumn"
+    "## Process each column"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "general-material",
+   "id": "regulation-exhibition",
    "metadata": {},
    "outputs": [
     {
@@ -335,7 +335,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "informal-click",
+   "id": "silver-assessment",
    "metadata": {},
    "outputs": [],
    "source": []
